-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
None
-
Affects Version/s: repo-shenandoah
-
Component/s: hotspot
This assertion failure has been observed in `TestAllocOutOfMemory.java` and `TestThreadFailure.java`.
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/Users/runner/work/shenandoah/shenandoah/src/hotspot/share/gc/shenandoah/shenandoahFullGC.cpp:184), pid=6021, tid=18435
# assert(heap->old_generation()->used_regions_size() <= heap->old_generation()->max_capacity()) failed: Old generation affiliated regions must be less than capacity
#
# JRE version: OpenJDK Runtime Environment (22.0) (fastdebug build 22-internal-earthling-amzn-5c2860661e52317ff513ca58924d71f1d8fff596)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 22-internal-earthling-amzn-5c2860661e52317ff513ca58924d71f1d8fff596, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, bsd-amd64)
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
```
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/Users/runner/work/shenandoah/shenandoah/src/hotspot/share/gc/shenandoah/shenandoahFullGC.cpp:184), pid=6021, tid=18435
# assert(heap->old_generation()->used_regions_size() <= heap->old_generation()->max_capacity()) failed: Old generation affiliated regions must be less than capacity
#
# JRE version: OpenJDK Runtime Environment (22.0) (fastdebug build 22-internal-earthling-amzn-5c2860661e52317ff513ca58924d71f1d8fff596)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 22-internal-earthling-amzn-5c2860661e52317ff513ca58924d71f1d8fff596, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, bsd-amd64)
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
```
- relates to
-
JDK-8311883 [Genshen] Adaptive tenuring threshold
-
- Resolved
-