8311843: GenShen: assertion failed "Old generation affiliated regions must be less than capacity"

Reviewed-by: kdnilsen