src/hotspot/share/gc/shenandoah/shenandoahGeneration.hpp
@@ -49,8 +49,6 @@ private:
 
   ShenandoahReferenceProcessor* const _ref_processor;
 
-  double _collection_thread_time_s;
-
   size_t _affiliated_region_count;
 
   // How much free memory is left in the last region of humongous objects.
@@ -225,16 +223,6 @@ private:
 
   virtual void record_success_concurrent(bool abbreviated);
   virtual void record_success_degenerated();
-
-  // Record the total on-cpu time a thread has spent collecting this
-  // generation. This is only called by the control thread (at the start
-  // of a collection) and by the VM thread at the end of the collection,
-  // so there are no locking concerns.
-  virtual void add_collection_time(double time_seconds);
-
-  // This returns the accumulated collection time and resets it to zero.
-  // This is used to decide which generation should be resized.
-  double reset_collection_time();
 };
 
 #endif // SHARE_VM_GC_SHENANDOAH_SHENANDOAHGENERATION_HPP
